<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:gravity="center"
	android:orientation="vertical">

    <Button
		android:id="@+id/btn_main_first"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/main_first_btn"/>

	<Button
		android:id="@+id/btn_main_sec"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/layout_margin"
		android:text="@string/main_sec_btn"/>

	<Button
		android:id="@+id/btn_main_third"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/layout_margin"
		android:text="@string/main_third_btn"/>

	<Button
		android:id="@+id/btn_main_fourth"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/layout_margin"
		android:text="@string/main_fourth_btn"/>

</LinearLayout>